# Blue2thprinting

./: .gitignore  .gitmodules  BTIDALPOOL_Android_Client_Protocol.md  CREDITS.md  GPS.md  README.md  remove.sh  setup_analysis_helper_debian-based.sh  setup_analysis_helper_macOS.sh  setup_analysis_helper_ubuntu.sh  setup_capture_helper_debian-based.sh  setup_capture_helper_ubuntu.sh  setup_helper_ubuntu.sh
Analysis/: .gitignore  APPLE_MODELS_CB.csv  APPLE_MODELS_DB.csv  BTIDALPOOL-client.crt  BTIDALPOOL-client.key  BTIDALPOOL_to_BTIDES.py  BTIDES_ATT.json  BTIDES_AdvData.json  BTIDES_EIR.json  BTIDES_GATT.json  BTIDES_GPS.json  BTIDES_HCI.json  BTIDES_L2CAP.json  BTIDES_LL.json  BTIDES_LMP.json  BTIDES_SDP.json  BTIDES_SMP.json  BTIDES_base.json  BTIDES_to_BTIDALPOOL.py  BTIDES_to_MySQL.py  BTIDES_to_SQL.py  Client-BTIDALPOOL.py  Custom_UUIDs.json  HCI_to_BTIDES.py  Import_All_HCI_and_PCAP.py  MANUFACTURER_IDENTIFIERS.json  Manufacturer_Identifiers.json  Metadata_v2.json  NAMEPRINT_DB.csv  NAMEPRINT_NONUNIQUE_DB.csv  NAMEPRINT_UNIQUE_DB.csv  PCAP_to_BTIDES.py  SDP_to_BTIDES.py  Server-BTIDALPOOL.md  Server-BTIDALPOOL.py  Server_BTIDALPOOL.py  SortCustomUUIDs.py  TME_AdvChan.py  TME_BLE2thprint.py  TME_BTC2thprint.py  (+49 more)
Analysis/BTIDES_Schema/: BTIDES_ATT.json  BTIDES_AdvData.json  BTIDES_EIR.json  BTIDES_GATT.json  BTIDES_GPS.json  BTIDES_HCI.json  BTIDES_L2CAP.json  BTIDES_LL.json  BTIDES_LMP.json  BTIDES_SDP.json  BTIDES_SMP.json  BTIDES_base.json
Analysis/CustomUUIDs_Schema/: CustomUUIDs_base.json
Analysis/Deprecated/: custom_uuid128s.csv  parse_BLE_2THPRINT_2db.py  parse_GATTPRINT_2db.py  parse_PCAP_2db.sh
Analysis/TME/: BTIDES_Data_Types.py  BT_Data_Types.py  TME_AdvChan.py  TME_BLE2thprint.py  TME_BTC2thprint.py  TME_BTIDES.py  TME_BTIDES_ATT.py  TME_BTIDES_AdvData.py  TME_BTIDES_EIR.py  TME_BTIDES_GATT.py  TME_BTIDES_GPS.py  TME_BTIDES_HCI.py  TME_BTIDES_L2CAP.py  TME_BTIDES_LL.py  TME_BTIDES_LLCP.py  TME_BTIDES_LMP.py  TME_BTIDES_SDP.py  TME_BTIDES_SMP.py  TME_BTIDES_base.py  TME_BTIDES_filter.py  TME_EIR.py  TME_GATT.py  TME_GPS.py  TME_L2CAP.py  TME_LLCP.py  TME_LMP.py  TME_SDP.py  TME_SMP.py  TME_UUID128.py  TME_UUID16.py  TME_UUID32.py  TME_glob.py  TME_helpers.py  TME_import.py  TME_lookup.py  TME_metadata.py  TME_names.py  TME_stats.py  TME_trackability.py
Analysis/metadata/: Metadata_v2.json  Model_Metadata_by_Manufacturer.json  NAMEPRINT_NONUNIQUE_DB.csv  NAMEPRINT_UNIQUE_DB.csv
Analysis/one_time_initialization/: initialize_database.sh  initialize_test_database.sh  process_Linux_USB_company_names.py  translator_fill_BLEScope_UUID128s.py  translator_fill_IEEE_bdaddr_to_company.sh  translator_fill_USB_CID_to_company.sh  translator_fill_UUID16_to_company.sh
Analysis/parse_HCI_2db_helpers/: fill_EIR_bdaddr_to_DevID.sh  fill_EIR_bdaddr_to_MSD.sh  fill_EIR_bdaddr_to_PSRM_CoD.sh  fill_EIR_bdaddr_to_UUID128s.sh  fill_EIR_bdaddr_to_UUID16s.sh  fill_EIR_bdaddr_to_UUID32s.sh  fill_EIR_bdaddr_to_flags.sh  fill_EIR_bdaddr_to_flags2.sh  fill_EIR_bdaddr_to_name.sh  fill_EIR_bdaddr_to_tx_power.sh  fill_LE_bdaddr_to_CoD.sh  fill_LE_bdaddr_to_MSD.sh  fill_LE_bdaddr_to_URI.sh  fill_LE_bdaddr_to_UUID128_service_solicit.sh  fill_LE_bdaddr_to_UUID128s.sh  fill_LE_bdaddr_to_UUID16_service_data.sh  fill_LE_bdaddr_to_UUID16_service_solicit.sh  fill_LE_bdaddr_to_UUID16s.sh  fill_LE_bdaddr_to_UUID32s.sh  fill_LE_bdaddr_to_appearance.sh  fill_LE_bdaddr_to_connect_interval.sh  fill_LE_bdaddr_to_flags.sh  fill_LE_bdaddr_to_flags2.sh  fill_LE_bdaddr_to_name.sh  fill_LE_bdaddr_to_name2.sh  fill_LE_bdaddr_to_other_le_bdaddr.sh  fill_LE_bdaddr_to_public_target_bdaddr.sh  fill_LE_bdaddr_to_service_data.sh  fill_LE_bdaddr_to_tx_power.sh  fill_RSP_bdaddr_to_name.sh
Analysis/parse_PCAP_2db_helpers/: pcap_fill_BLE2th_LL_FEATUREs.sh  pcap_fill_BLE2th_LL_LENGTHs.sh  pcap_fill_BLE2th_LL_VERSION_IND.sh  (+18 more)
Analysis/rust/: Cargo.toml  README.md
Analysis/rust/BTIDES-to-SQL/: Cargo.toml  README.md  SESSION_NOTES.md
Analysis/rust/BTIDES-to-SQL/src/: lib.rs  main.rs
Analysis/rust/btides_to_sql_rs/: Cargo.toml  README.md  SESSION_NOTES.md
Analysis/rust/btides_to_sql_rs/src/: main.rs
Analysis/rust/import-all-BTIDES/: Cargo.toml
Analysis/rust/import-all-BTIDES/src/: main.rs
Analysis/rust/wigle-to-BTIDES/: Cargo.toml
Analysis/rust/wigle-to-BTIDES/src/: main.rs
BTIDALPOOL/: Cargo.toml  README.md
BTIDALPOOL/crates/btidalpool-client/: Cargo.toml
BTIDALPOOL/crates/btidalpool-client/src/: lib.rs  main.rs  refresh.rs  transport.rs
BTIDALPOOL/crates/btidalpool-proto/: Cargo.toml
BTIDALPOOL/crates/btidalpool-proto/src/: codec.rs  hash.rs  lib.rs  wire.rs
BTIDALPOOL/crates/btidalpool-server/: Cargo.toml
BTIDALPOOL/crates/btidalpool-server/src/: handlers.rs  http.rs  ingest.rs  lib.rs  main.rs  oauth.rs  query.rs  rate_limit.rs  state.rs
BTIDALPOOL/crates/btidalpool-server/tests/: loopback.rs
BTIDALPOOL/python/: BTIDALPOOL_to_BTIDES.py  BTIDES_to_BTIDALPOOL.py  _btidalpool_runner.py  test_query_parity.py  test_shim_loopback.py
BTIDALPOOL/tests/: query_parity_fixtures.json
Braktooth_module/: LMP2thprint.cpp
Scripts/: 2thprintTarget-DEPRECATED.py  Clean_BG.py  btc_sdp_gatt.py  central_app_launcher.py  central_app_launcher2.py  check.sh  clearlogs.sh  delete_gps_files_lacking_lat_long.py  dump_names_specific.sh  google-SSO-redirect-and-token-print-server.py  gpspipe2mysql.py  handle_venv.py  install_from_scratch_test.sh  killall.sh  lib_bluetooth.sh  map_specific.sh  pi_synctime.sh  plot_specific.py  runall.sh  start_bluetoothctl.sh  start_btmon.sh  start_central_app_launcher.sh  start_gpspipe.sh
Sniffle/sniffle_receiver_rust_src/: .gitignore  Cargo.toml  README.md  gen_advdata_constants.py  python_parity_oracle.py
Sniffle/sniffle_receiver_rust_src/src/: advdata.rs  main.rs
bluez-5.66/: config.status  libtool
docs/: Analysis.md  BTIDALPOOL.md  Capture.md  GPS.md  Import.md  laptopHW.md  maxHW.md  minHW.md
sweyntooth_bluetooth_low_energy_attacks/: .two2thprint.py.swp  LL2thprint.py  Telink_key_size_overflow.pcap  Telink_key_size_overflow.py  ble_wrap.py  send_wo_connect.py
(+457 files in other folders)
