[package]
name = "sniffle_receiver_rust"
version = "0.1.0"
edition = "2021"
description = "Sniffle host-side receiver in Rust — drop-in replacement for sniff_receiver.py."

[dependencies]
# No external deps — keeps the build hermetic so the Pi Zero W (which can't
# easily reach crates.io over its slow link) can build offline.


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
