[package]
name = "BTIDES-to-SQL"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust port of Analysis/BTIDES_to_SQL.py; imports BTIDES JSON into bt2/bttest."

# The Rust identifier for the library (used in `use` statements) cannot
# contain dashes, so we explicitly set it to the snake_case form. This is
# the standard Cargo convention — by default it'd auto-convert `BTIDES-to-SQL`
# to `BTIDES_to_SQL` anyway, but pinning it makes the import paths in main.rs
# and import-all-BTIDES unambiguous.
[lib]
name = "BTIDES_to_SQL"
path = "src/lib.rs"

[[bin]]
name = "BTIDES-to-SQL"
path = "src/main.rs"

[dependencies]
# This crate's `mysql` is pinned to v28 for the `buffer-pool` feature, distinct
# from the workspace's v26 used by `wigle-to-BTIDES`. Cargo allows both versions
# to coexist in the dependency graph.
mysql = { version = "28", default-features = false, features = ["minimal", "buffer-pool"] }
serde_json.workspace = true
clap.workspace = true
hex = "0.4"
regex = "1"
once_cell = "1"
