[package]
name = "btides_to_sql_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btides_to_sql_rs"
path = "src/main.rs"

[dependencies]
serde_json = "1"
mysql = { version = "28", default-features = false, features = ["minimal", "buffer-pool"] }
clap = { version = "4", features = ["derive"] }
hex = "0.4"
regex = "1"
once_cell = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
